--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nextjs-course-myversion",
+  "name": "rollplan",
   "version": "1.0.0",
-  "description": "",
+  "description": "The roll plan, built for brazillian ju-jitsu gyms. Configured with NextJS, typescript, MongoDB, Redis and much more.",
   "main": "index.js",
   "scripts": {
     "lint": "eslint . --ext .ts",
@@ -9,19 +9,26 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/leadcentaur/nextjs-course-myversion.git"
+    "url": "git+https://github.com/leadcentaur/rollplan.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/leadcentaur/nextjs-course-myversion/issues"
+    "url": "https://github.com/leadcentaur/rollplan/issues"
   },
-  "homepage": "https://github.com/leadcentaur/nextjs-course-myversion#readme",
+  "homepage": "https://github.com/leadcentaur/rollplan#readme",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.1.4",
+    "envalid": "^7.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.2.2"
   }
 }
