--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rollplan",
+  "name": "nextjs-course-myversion",
   "version": "1.0.0",
-  "description": "The roll plan, built for brazillian ju-jitsu gyms. Configured with NextJS, typescript, MongoDB, Redis and much more.",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/server.ts",
@@ -10,17 +10,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/leadcentaur/rollplan.git"
+    "url": "git+https://github.com/leadcentaur/nextjs-course-myversion.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/leadcentaur/rollplan/issues"
+    "url": "https://github.com/leadcentaur/nextjs-course-myversion/issues"
   },
-  "homepage": "https://github.com/leadcentaur/rollplan#readme",
+  "homepage": "https://github.com/leadcentaur/nextjs-course-myversion#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
@@ -29,9 +31,11 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.2",
+    "morgan": "^1.10.0"
   }
 }
