--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-course-myversion",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,34 +8,52 @@
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/leadcentaur/nextjs-course-myversion.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/leadcentaur/nextjs-course-myversion/issues"
-  },
-  "homepage": "https://github.com/leadcentaur/nextjs-course-myversion#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
+    "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
-    "eslint": "^8.42.0",
-    "nodemon": "^2.0.22",
+    "@types/multer": "^1.4.7",
+    "@types/nodemailer": "^6.4.7",
+    "@types/passport": "^1.0.12",
+    "@types/passport-github2": "^1.2.5",
+    "@types/passport-google-oauth20": "^2.0.11",
+    "@types/passport-local": "^1.0.35",
+    "@types/sharp": "^0.31.1",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "eslint": "^8.36.0",
+    "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.0.2"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
+    "connect-mongo": "^5.0.0",
+    "connect-redis": "^7.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2",
-    "morgan": "^1.10.0"
+    "express-rate-limit": "^6.7.0",
+    "express-session": "^1.17.3",
+    "http-errors": "^2.0.0",
+    "mongoose": "^7.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "redis": "^4.6.6",
+    "sharp": "^0.31.3",
+    "validate-image-type": "^2.0.0",
+    "yup": "^1.0.2"
   }
 }
