--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
+    "swr": "^2.1.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "yup": "^1.1.1"
