--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "swr": "^2.1.1",
