--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/sharp-light-svg-icons": "^6.4.0",
     "@fortawesome/sharp-regular-svg-icons": "^6.4.0",
     "@fortawesome/sharp-solid-svg-icons": "^6.4.0",
+    "@hookform/resolvers": "^3.1.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
@@ -28,17 +29,20 @@
     "date-fns": "^2.30.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "i": "^0.3.7",
     "next": "13.4.4",
     "nextjs-progressbar": "^0.0.16",
+    "npm": "^9.7.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.44.3",
+    "react-hook-form": "^7.45.0",
+    "react-loader-spinner": "^5.3.4",
     "swr": "^2.1.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "yup": "^1.1.1"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
