--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/pro-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0"
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "html-loader": "^4.2.0",
+    "url-loader": "^4.1.1"
   }
 }
