made changes to update user profile page added belt, fn, ln selection

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,12 @@
     "@fortawesome/sharp-light-svg-icons": "^6.4.0",
     "@fortawesome/sharp-regular-svg-icons": "^6.4.0",
     "@fortawesome/sharp-solid-svg-icons": "^6.4.0",
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/list": "^6.1.8",
+    "@fullcalendar/react": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
     "@hookform/resolvers": "^3.1.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
