--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.45.0",
     "react-loader-spinner": "^5.3.4",
+    "react-router-dom": "^6.15.0",
     "swr": "^2.1.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
