--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
     "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.45.0",
